--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "eslint-plugin-danitatt",
-  "version": "1.1.0",
-  "main": "main.js"
+  "main": "main.js",
+  "scripts": {
+    "commit": "cz"
+  },
+  "devDependencies": {
+    "commitizen": "^4.2.6",
+    "cz-conventional-changelog": "^3.3.0",
+    "semantic-release": "^20.0.2"
+  }
 }
